--- a/_sources/code/SVM.ipynb
+++ b/_sources/code/SVM.ipynb
@@ -13,7 +13,7 @@
    "id": "77c5b82c",
    "metadata": {},
    "source": [
-    "In the Data.analysis notebook Logistic Regression pipielines were computed for classifying the participants either as control or patient.This notebook is a continuation of the Data.analysis notebook and serves the purpose of computing **SVM** pipelines for macro-structural and micro-structural data."
+    "This section is a continuation of the Logistic Regression section and serves the purpose of computing **SVM** pipelines for **macro-structural** and **micro-structural** data."
    ]
   },
   {
@@ -48,7 +48,7 @@
    "id": "684f23ec",
    "metadata": {},
    "source": [
-    "In this section, a SVM pipeline will be computed for the macro-structual data **CT**. Firstly, the data is loaded and prepared for the analysis part. Secondly, the SVM model is built containing the analysis. Finally, we evaluate our model and have a look at how it performs. "
+    "In this section, a SVM pipeline will be computed for the **macro-structual data: CT**. Firstly, the data is loaded and prepared for the analysis part. Secondly, the SVM model is built containing the analysis. Finally, we evaluate our model and have a look at how it performs. "
    ]
   },
   {
@@ -60,8 +60,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d33790d6",
+   "metadata": {},
+   "source": [
+    "Relevant modules are imported that are neccessary to perfrom the analyses."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "35d1e690",
    "metadata": {},
    "outputs": [],
@@ -75,14 +83,15 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn import svm\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c1931bff",
    "metadata": {},
    "outputs": [],
@@ -94,8 +103,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "169cc7d9",
+   "metadata": {},
+   "source": [
+    "The dataframe is adjusted accordingly, droping irrelevant variables for the classification."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3408dbd6",
    "metadata": {},
    "outputs": [],
@@ -107,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "719b09bd",
    "metadata": {},
    "outputs": [],
@@ -118,68 +135,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b1a375ea",
+   "cell_type": "markdown",
+   "id": "12f7636c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Features:  Index(['lh_bankssts_part2_thickness',\n",
-      "       'lh_caudalanteriorcingulate_part1_thickness',\n",
-      "       'lh_caudalmiddlefrontal_part1_thickness',\n",
-      "       'lh_caudalmiddlefrontal_part2_thickness',\n",
-      "       'lh_caudalmiddlefrontal_part3_thickness',\n",
-      "       'lh_caudalmiddlefrontal_part4_thickness', 'lh_cuneus_part1_thickness',\n",
-      "       'lh_cuneus_part2_thickness', 'lh_entorhinal_part1_thickness',\n",
-      "       'lh_fusiform_part1_thickness',\n",
-      "       ...\n",
-      "       'rh_supramarginal_part4_thickness', 'rh_supramarginal_part5_thickness',\n",
-      "       'rh_supramarginal_part6_thickness', 'rh_supramarginal_part7_thickness',\n",
-      "       'rh_frontalpole_part1_thickness', 'rh_temporalpole_part1_thickness',\n",
-      "       'rh_transversetemporal_part1_thickness', 'rh_insula_part1_thickness',\n",
-      "       'rh_insula_part2_thickness', 'rh_insula_part3_thickness'],\n",
-      "      dtype='object', length=306)\n"
-     ]
-    }
-   ],
    "source": [
-    "#print the names of the 308 features\n",
-    "\n",
-    "print(\"Features: \", CT_Dublin_adj.columns[2:308])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c36d144f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Labels:  0      0\n",
-      "1      0\n",
-      "2      0\n",
-      "3      1\n",
-      "4      1\n",
-      "      ..\n",
-      "103    1\n",
-      "104    1\n",
-      "105    1\n",
-      "106    1\n",
-      "107    1\n",
-      "Name: Group, Length: 108, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "#print the names of the labels\n",
-    "\n",
-    "print(\"Labels: \", CT_Dublin_adj['Group'])"
+    "Here, 0 stands for \"Control\" and 1 for \"Patient\". "
    ]
   },
   {
@@ -195,41 +155,41 @@
    "id": "e95c5666",
    "metadata": {},
    "source": [
-    "As in the Data.analysis notebook, as a first step the input and output data should be defined. It is analogous to the Logistic Regression input and output since it is the identical **CT** data."
+    "As in the Logistic regression, as a first step the input and output variables should be defined. It is analogous to the Logistic Regression input and output since it is the identical **CT** data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "b992bc0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#define data and target\n",
     "\n",
-    "X_CT = CT_Dublin_adj.iloc[:,1:308].values\n",
+    "X_CT = CT_Dublin_adj.iloc[:,1:309].values\n",
     "y_CT = CT_Dublin_adj.iloc[:,[0]].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "d03fb7a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2.18 , 2.382, 2.346, ..., 3.62 , 2.776, 3.282],\n",
-       "       [2.394, 1.973, 2.534, ..., 3.588, 2.654, 3.124],\n",
-       "       [2.551, 2.567, 1.954, ..., 3.657, 2.495, 2.669],\n",
+       "array([[2.18 , 2.382, 2.346, ..., 2.776, 3.282, 3.347],\n",
+       "       [2.394, 1.973, 2.534, ..., 2.654, 3.124, 3.214],\n",
+       "       [2.551, 2.567, 1.954, ..., 2.495, 2.669, 2.886],\n",
        "       ...,\n",
-       "       [2.273, 2.559, 2.578, ..., 3.48 , 2.294, 2.571],\n",
-       "       [1.94 , 2.438, 2.272, ..., 3.187, 2.51 , 2.759],\n",
-       "       [2.108, 2.269, 2.145, ..., 3.192, 2.551, 2.855]])"
+       "       [2.273, 2.559, 2.578, ..., 2.294, 2.571, 2.875],\n",
+       "       [1.94 , 2.438, 2.272, ..., 2.51 , 2.759, 2.838],\n",
+       "       [2.108, 2.269, 2.145, ..., 2.551, 2.855, 2.985]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "8395ff0f",
    "metadata": {
     "scrolled": true
@@ -359,7 +319,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "4bd31e4f",
    "metadata": {},
    "outputs": [],
@@ -379,8 +339,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b45ff997",
+   "metadata": {},
+   "source": [
+    "In the following, we build the SVM model using GridSearch to identify the best Value of C for the best possible accuracy. The C hyperparamter \"adds a penalty for each misclassified data point. If c is small, the penalty for misclassified points is low so a decision boundary with a large margin is chosen at the expense of a greater number of misclassifications. If c is large, SVM tries to minimize the number of misclassified examples due to high penalty which results in a decision boundary with a smaller margin\" ([see here](https://towardsdatascience.com/hyperparameter-tuning-for-support-vector-machines-c-and-gamma-parameters-6a5097416167))."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "006bbbf2",
    "metadata": {},
    "outputs": [
@@ -394,10 +362,6 @@
     }
    ],
    "source": [
-    "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
     "# Split the dataset into training and testing sets\n",
     "X_train_CT, X_test_CT, y_train_CT, y_test_CT = train_test_split(X_CT, y_CT, test_size=0.3, random_state=42)\n",
     "\n",
@@ -423,6 +387,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f16e624",
+   "metadata": {},
+   "source": [
+    "As we can see, according to GridSearch the best Value for the C parameter is 1. The **accuracy** of our model is around 91%. However, let us check other performance measures!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d60fa084",
    "metadata": {},
    "source": [
@@ -430,8 +402,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04293f11",
+   "metadata": {},
+   "source": [
+    "As in the Logistic Regression, we can have a look at different measurements to gain insight of how the model performs.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "9355d126",
    "metadata": {},
    "outputs": [],
@@ -441,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "cd1dd7ee",
    "metadata": {},
    "outputs": [
@@ -465,10 +445,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ddbad4d5",
+   "metadata": {},
+   "source": [
+    "The results show that all except for **Recall**, all other measures seem to be higher compared to the logistic regression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d3e85b18",
    "metadata": {},
    "source": [
     "## 3. Micro-structural data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d47663a",
+   "metadata": {},
+   "source": [
+    "In the following the same routine is applied to the **microstructural** data. First, we begin with **MD**."
    ]
   },
   {
@@ -488,8 +484,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e38df4e0",
+   "metadata": {},
+   "source": [
+    "First, the data is prepared for the analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "4a712a3a",
    "metadata": {},
    "outputs": [],
@@ -502,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "df5066a4",
    "metadata": {},
    "outputs": [],
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "15d4a1b7",
    "metadata": {},
    "outputs": [],
@@ -526,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "f3476638",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1008,7 @@
        "[115 rows x 309 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,21 +1026,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9148a9b",
+   "metadata": {},
+   "source": [
+    "Again, we define the input and output variables. Here, we now have **MD** for each brain region as our input."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "7cd652cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "#define input and output\n",
     "\n",
-    "X_MD = MD_Dublin_adj.iloc[:,1:308].values\n",
+    "X_MD = MD_Dublin_adj.iloc[:,1:309].values\n",
     "y_MD = MD_Dublin_adj.iloc[:,[0]].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "312d5ad5",
    "metadata": {},
    "outputs": [],
@@ -1045,8 +1057,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21b5ee54",
+   "metadata": {},
+   "source": [
+    "We run the same SVM pipeline for the **MD** data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "5fd8e020",
    "metadata": {},
    "outputs": [
@@ -1060,10 +1080,6 @@
     }
    ],
    "source": [
-    "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
     "# Split the dataset into training and testing sets\n",
     "X_train_MD, X_test_MD, y_train_MD, y_test_MD = train_test_split(X_MD, y_MD, test_size=0.3,random_state=109)\n",
     "\n",
@@ -1088,13 +1104,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36d393b4",
+   "metadata": {},
+   "source": [
+    "The model seems to perform less well than the model for **CT**, but still the **accuracy** is good. Let's have a look at the other measures.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "a6d3c575",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_MD = svm_best_MD.predict(MD_X_test)"
+    "y_pred_MD = svm_best_MD.predict(X_test_MD)"
    ]
   },
   {
@@ -1107,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "id": "0834e08a",
    "metadata": {},
    "outputs": [
@@ -1131,10 +1155,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14d4fd07",
+   "metadata": {},
+   "source": [
+    "Compared to the logistic regression, this model for **MD** has higher **Accuracy and Precision** but a lower **Recall**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8221bfa4",
    "metadata": {},
    "source": [
     "### 3.2 Fractional Anisotropy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a07fd85d",
+   "metadata": {},
+   "source": [
+    "Let's see how **FA** values might perfrom in terms of informativeness for accurate classification. "
    ]
   },
   {
@@ -1146,8 +1186,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6e1bf1b",
+   "metadata": {},
+   "source": [
+    "First, the data is prepared for the analyis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "f14d0b87",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "df4de812",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "d04dfaea",
    "metadata": {},
    "outputs": [],
@@ -1191,21 +1239,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4a35b6f",
+   "metadata": {},
+   "source": [
+    "This time, as input we choose the **FA** values for the 308 brain regions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 39,
    "id": "fb748893",
    "metadata": {},
    "outputs": [],
    "source": [
     "#define input and output\n",
     "\n",
-    "X_FA = FA_Dublin_adj.iloc[:,1:308].values\n",
+    "X_FA = FA_Dublin_adj.iloc[:,1:309].values\n",
     "y_FA = FA_Dublin_adj.iloc[:,[0]].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 42,
    "id": "356c1062",
    "metadata": {},
    "outputs": [],
@@ -1214,8 +1270,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3181802d",
+   "metadata": {},
+   "source": [
+    "We again run the same pipeline for the **FA** values!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "id": "3e98409a",
    "metadata": {},
    "outputs": [
@@ -1229,10 +1293,6 @@
     }
    ],
    "source": [
-    "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
     "# Split the dataset into training and testing sets\n",
     "X_train_FA, X_test_FA, y_train_FA, y_test_FA = train_test_split(X_FA, y_FA, test_size=0.3,random_state=109)\n",
     "\n",
@@ -1258,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 44,
    "id": "c4afd2f5",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "id": "6061b668",
    "metadata": {},
    "outputs": [
@@ -1299,20 +1359,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18093102",
+   "cell_type": "markdown",
+   "id": "ae713c1e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd2fd40c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In comparison to the Logistic Regression Model, the **accuracy and precision** are higher again, but the **recall** score is way lower."
+   ]
   }
  ],
  "metadata": {
