finished logistic regression

--- a/content/code/Data_analysis.ipynb
+++ b/content/code/Data_analysis.ipynb
@@ -3739,7 +3739,7 @@
    "id": "7e26df31",
    "metadata": {},
    "source": [
-    "What can be seen is, that **CT** has the highest **accuracy** score, **MD** has the highest **precision** score, **CT** the highest **recall** and **MD** the highest **F1-Score**. **Precision and Recall** values are inversely related. As one increases, the other decreases. So when we relate to the **F1-Score**, **MD** is performs better.\n"
+    "What can be seen is, that **CT** has the highest **accuracy** score, **MD** has the highest **precision** score, **CT** the highest **recall** and **MD** the highest **F1-Score**. **Precision and Recall** values are inversely related. As one increases, the other decreases. So when we relate to the **F1-Score**, **MD** performs better.\n"
    ]
   },
   {
