--- a/_sources/code/SVM.ipynb
+++ b/_sources/code/SVM.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "35d1e690",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c1931bff",
    "metadata": {},
    "outputs": [],
@@ -107,12 +107,12 @@
    "id": "169cc7d9",
    "metadata": {},
    "source": [
-    "The dataframe is adjusted accordingly, droping irrelevant variables for the classification."
+    "The dataframe is adjusted accordingly, removing irrelevant variables for the classification."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3408dbd6",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "719b09bd",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b992bc0c",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d03fb7a0",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "       [2.108, 2.269, 2.145, ..., 2.551, 2.855, 2.985]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8395ff0f",
    "metadata": {
     "scrolled": true
@@ -319,7 +319,7 @@
        "       [1]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,8 +329,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4660d793",
+   "metadata": {},
+   "source": [
+    "As in the Logistic Regression we have to use the ```.ravel``` function fur further analyses."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "4bd31e4f",
    "metadata": {},
    "outputs": [],
@@ -343,12 +351,12 @@
    "id": "b45ff997",
    "metadata": {},
    "source": [
-    "In the following, we build the SVM model using GridSearch to identify the best Value of C for the best possible accuracy. The C hyperparamter \"adds a penalty for each misclassified data point. If c is small, the penalty for misclassified points is low so a decision boundary with a large margin is chosen at the expense of a greater number of misclassifications. If c is large, SVM tries to minimize the number of misclassified examples due to high penalty which results in a decision boundary with a smaller margin\" ([see here](https://towardsdatascience.com/hyperparameter-tuning-for-support-vector-machines-c-and-gamma-parameters-6a5097416167))."
+    "In the following, we build the SVM model using GridSearch to identify the best value of C for the best possible accuracy. The C hyperparameter \"adds a penalty for each misclassified data point. If C is small, the penalty for misclassified points is low so a decision boundary with a large margin is chosen at the expense of a greater number of misclassifications. If C is large, SVM tries to minimize the number of misclassified examples due to high penalty which results in a decision boundary with a smaller margin\" ([see here](https://towardsdatascience.com/hyperparameter-tuning-for-support-vector-machines-c-and-gamma-parameters-6a5097416167)). Also, we are using a 5-fold cross validation as indicated by ```cv```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "006bbbf2",
    "metadata": {},
    "outputs": [
@@ -362,13 +370,13 @@
     }
    ],
    "source": [
-    "# Split the dataset into training and testing sets\n",
+    "# Split dataset into training and testing sets\n",
     "X_train_CT, X_test_CT, y_train_CT, y_test_CT = train_test_split(X_CT, y_CT, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Create a SVM classifier\n",
+    "# Create linear SVM classifier\n",
     "svm = SVC(kernel = 'linear')\n",
     "\n",
-    "# Define the range of values for the C hyperparameter\n",
+    "# Define  range of values for the C hyperparameter\n",
     "param_grid = {'C': [0.1, 1, 10, 100]}\n",
     "\n",
     "# Perform a grid search cross-validation to find the best value of C\n",
@@ -411,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9355d126",
    "metadata": {},
    "outputs": [],
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cd1dd7ee",
    "metadata": {},
    "outputs": [
@@ -448,7 +456,7 @@
    "id": "ddbad4d5",
    "metadata": {},
    "source": [
-    "The results show that all except for **Recall**, all other measures seem to be higher compared to the logistic regression."
+    "As the results reveal, our SVM model for **cortical thickness** makes 90.91% of the time correct predictions. 83.33% represent the proportion of the model’s prediction of psychosis where psychosis is actually present and 71.43% relate to the proportion of all cases of psychosis that the model accurately predicted."
    ]
   },
   {
@@ -493,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4a712a3a",
    "metadata": {},
    "outputs": [],
@@ -506,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "df5066a4",
    "metadata": {},
    "outputs": [],
@@ -518,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "15d4a1b7",
    "metadata": {},
    "outputs": [],
@@ -530,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f3476638",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1016,7 @@
        "[115 rows x 309 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "7cd652cc",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "312d5ad5",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "5fd8e020",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "a6d3c575",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "0834e08a",
    "metadata": {},
    "outputs": [
@@ -1155,10 +1163,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14d4fd07",
+   "id": "e1fd1eaf",
    "metadata": {},
    "source": [
-    "Compared to the logistic regression, this model for **MD** has higher **Accuracy and Precision** but a lower **Recall**"
+    "As the results reveal, our SVM model for **mean diffusivity** makes 82.86% of the time correct predictions. 83.33% represent the proportion of the model’s prediction of psychosis where psychosis is actually present and 50% relate to the proportion of all cases of psychosis that the model accurately predicted."
    ]
   },
   {
@@ -1195,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "f14d0b87",
    "metadata": {},
    "outputs": [],
@@ -1208,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "df4de812",
    "metadata": {},
    "outputs": [],
@@ -1220,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "d04dfaea",
    "metadata": {},
    "outputs": [],
@@ -1248,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "fb748893",
    "metadata": {},
    "outputs": [],
@@ -1261,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "356c1062",
    "metadata": {},
    "outputs": [],
@@ -1279,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "3e98409a",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "c4afd2f5",
    "metadata": {},
    "outputs": [],
@@ -1336,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "id": "6061b668",
    "metadata": {},
    "outputs": [
@@ -1360,10 +1368,77 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae713c1e",
+   "id": "1a099fef",
    "metadata": {},
    "source": [
-    "In comparison to the Logistic Regression Model, the **accuracy and precision** are higher again, but the **recall** score is way lower."
+    "As the results reveal, our SVM model for **fractional anisotropy** makes 77.14% of the time correct predictions. 75% represent the proportion of the model’s prediction of psychosis where psychosis is actually present and 30% relate to the proportion of all cases of psychosis that the model accurately predicted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dae1218",
+   "metadata": {},
+   "source": [
+    "## 4 Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "893cae70",
+   "metadata": {},
+   "source": [
+    "We can again summarize the finding in a table for a better overview. First import ```tabulate```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ac9079a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f5d6cd33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Measure      Cortical Thickness    Mean Diffusivity    Fractional Anisotropy\n",
+      "---------  --------------------  ------------------  -----------------------\n",
+      "Accuracy               0.909091            0.828571                 0.771429\n",
+      "Precision              0.833333            0.833333                 0.75\n",
+      "Recall                 0.714286            0.5                      0.3\n",
+      "F1-Score               0.769231            0.625                    0.428571\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create data\n",
+    "data_SVM = [[\"Accuracy\", metrics.accuracy_score(y_test_CT, y_pred_CT), metrics.accuracy_score(y_test_MD, y_pred_MD), metrics.accuracy_score(y_test_FA, y_pred_FA)], \n",
+    "        [\"Precision\", metrics.precision_score(y_test_CT, y_pred_CT), metrics.precision_score(y_test_MD, y_pred_MD),metrics.precision_score(y_test_FA, y_pred_FA)], \n",
+    "        [\"Recall\", metrics.recall_score(y_test_CT, y_pred_CT), metrics.recall_score(y_test_MD, y_pred_MD),metrics.recall_score(y_test_FA, y_pred_FA)], \n",
+    "        [\"F1-Score\", metrics.f1_score(y_test_CT, y_pred_CT), metrics.f1_score(y_test_MD, y_pred_MD), metrics.f1_score(y_test_FA, y_pred_FA)]]\n",
+    "  \n",
+    "#define header names\n",
+    "col_names = [\"Measure\", \"Cortical Thickness\", \"Mean Diffusivity\", \"Fractional Anisotropy\"]\n",
+    "  \n",
+    "#display table\n",
+    "print(tabulate(data_SVM, headers=col_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4217425",
+   "metadata": {},
+   "source": [
+    "What can be seen for the **SVM** model is that **CT** has the highest **accuracy** and **reval** score. **MD** has the highest **precision** score. Precision and Recall values are inversely related. Again, when we relate to the **F1-Score**, this time the classifier seems to perform better for **CT**."
    ]
   }
  ],
