--- a/content/code/SVM.ipynb
+++ b/content/code/SVM.ipynb
@@ -1375,11 +1375,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1dae1218",
    "metadata": {},
    "source": [
-    "## 4 Summary"
+    "## 4. Summary"
    ]
   },
   {
